[gd_scene load_steps=3 format=3]

[ext_resource type="PackedScene" path="res://scenes/sections/base_section.tscn" id="1_0"]
[ext_resource type="Script" path="res://scripts/ui/terrain_section.gd" id="2_0"]

[node name="terrain_section" instance=ExtResource("1_0")]
script = ExtResource("2_0")

[node name="MarginContainer" parent="." index="0"]
[node name="VBoxContainer" parent="MarginContainer" index="0"]
[node name="HBoxContainer" parent="MarginContainer/VBoxContainer" index="0"]
[node name="Button" parent="MarginContainer/VBoxContainer/HBoxContainer" index="0"]
[node name="Label" parent="MarginContainer/VBoxContainer/HBoxContainer" index="1"]
text = "Terrain & Geography"

[node name="content" parent="MarginContainer/VBoxContainer" index="1"]

[node name="ElevationScaleContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/content"]
layout_mode = 2

[node name="ElevationScaleLabel" type="Label" parent="MarginContainer/VBoxContainer/content/ElevationScaleContainer"]
layout_mode = 2
text = "Elevation Scale:"

[node name="ElevationScaleSlider" type="HSlider" parent="MarginContainer/VBoxContainer/content/ElevationScaleContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 200.0
value = 100.0
step = 1.0

[node name="ElevationScaleSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/content/ElevationScaleContainer"]
layout_mode = 2
min_value = 0.0
max_value = 200.0
value = 100.0
step = 1.0

[node name="TerrainChaosContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/content"]
layout_mode = 2

[node name="TerrainChaosLabel" type="Label" parent="MarginContainer/VBoxContainer/content/TerrainChaosContainer"]
layout_mode = 2
text = "Terrain Chaos:"

[node name="TerrainChaosSlider" type="HSlider" parent="MarginContainer/VBoxContainer/content/TerrainChaosContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 100.0
value = 50.0
step = 1.0

[node name="TerrainChaosSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/content/TerrainChaosContainer"]
layout_mode = 2
min_value = 0.0
max_value = 100.0
value = 50.0
step = 1.0

[node name="DomainWarpStrengthContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/content"]
layout_mode = 2

[node name="DomainWarpStrengthLabel" type="Label" parent="MarginContainer/VBoxContainer/content/DomainWarpStrengthContainer"]
layout_mode = 2
text = "Domain Warp Strength:"

[node name="DomainWarpStrengthSlider" type="HSlider" parent="MarginContainer/VBoxContainer/content/DomainWarpStrengthContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 100.0
value = 0.0
step = 1.0

[node name="DomainWarpStrengthSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/content/DomainWarpStrengthContainer"]
layout_mode = 2
min_value = 0.0
max_value = 100.0
value = 0.0
step = 1.0

[node name="DomainWarpFreqContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/content"]
layout_mode = 2

[node name="DomainWarpFreqLabel" type="Label" parent="MarginContainer/VBoxContainer/content/DomainWarpFreqContainer"]
layout_mode = 2
text = "Domain Warp Frequency:"

[node name="DomainWarpFreqSlider" type="HSlider" parent="MarginContainer/VBoxContainer/content/DomainWarpFreqContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.001
max_value = 0.1
value = 0.005
step = 0.001

[node name="ErosionContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/content"]
layout_mode = 2

[node name="EnableErosionCheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/content/ErosionContainer"]
layout_mode = 2
text = "Enable Erosion"

[node name="ErosionStrengthContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/content/ErosionContainer"]
layout_mode = 2

[node name="ErosionStrengthLabel" type="Label" parent="MarginContainer/VBoxContainer/content/ErosionContainer/ErosionStrengthContainer"]
layout_mode = 2
text = "Erosion Strength:"

[node name="ErosionStrengthSlider" type="HSlider" parent="MarginContainer/VBoxContainer/content/ErosionContainer/ErosionStrengthContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 100.0
value = 50.0
step = 1.0

[node name="ErosionStrengthSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/content/ErosionContainer/ErosionStrengthContainer"]
layout_mode = 2
min_value = 0.0
max_value = 100.0
value = 50.0
step = 1.0

[node name="ErosionIterationsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/content/ErosionContainer"]
layout_mode = 2

[node name="ErosionIterationsLabel" type="Label" parent="MarginContainer/VBoxContainer/content/ErosionContainer/ErosionIterationsContainer"]
layout_mode = 2
text = "Erosion Iterations:"

[node name="ErosionIterationsSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/content/ErosionContainer/ErosionIterationsContainer"]
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 5.0
step = 1.0

[node name="NoiseTypeContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/content"]
layout_mode = 2

[node name="NoiseTypeLabel" type="Label" parent="MarginContainer/VBoxContainer/content/NoiseTypeContainer"]
layout_mode = 2
text = "Noise Type:"

[node name="NoiseTypeOptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/content/NoiseTypeContainer"]
layout_mode = 2
size_flags_horizontal = 3
selected = 0

[node name="SizePresetContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/content"]
layout_mode = 2

[node name="SizePresetLabel" type="Label" parent="MarginContainer/VBoxContainer/content/SizePresetContainer"]
layout_mode = 2
text = "World Size:"

[node name="SizePresetOptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/content/SizePresetContainer"]
layout_mode = 2
size_flags_horizontal = 3
selected = 2

[node name="EnableRiversCheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/content"]
layout_mode = 2
text = "Enable Rivers"

[node name="LODContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/content"]
layout_mode = 2

[node name="EnableLODCheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/content/LODContainer"]
layout_mode = 2
text = "Enable LOD System"
button_pressed = true

[node name="LODLevelsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/content/LODContainer"]
layout_mode = 2

[node name="LODLevelsLabel" type="Label" parent="MarginContainer/VBoxContainer/content/LODContainer/LODLevelsContainer"]
layout_mode = 2
text = "LOD Levels:"

[node name="LODLevelsSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/content/LODContainer/LODLevelsContainer"]
layout_mode = 2
min_value = 2.0
max_value = 4.0
value = 3.0
step = 1.0

[node name="ChunkSizeContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/content/LODContainer"]
layout_mode = 2

[node name="ChunkSizeLabel" type="Label" parent="MarginContainer/VBoxContainer/content/LODContainer/ChunkSizeContainer"]
layout_mode = 2
text = "Chunk Size:"

[node name="ChunkSizeOptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/content/LODContainer/ChunkSizeContainer"]
layout_mode = 2
size_flags_horizontal = 3
selected = 1
